Registrazione utente fruitore. piccoli fix qua e là